<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/srPosition"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPositin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="18dp"
        android:paddingTop="18dp">

        <TextView
            android:id="@+id/tvPositionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_list"
            android:textColor="@color/black"
            android:textSize="@dimen/text_head"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etFilterSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_border"
            android:drawablePadding="10dp"
            android:hint="@string/search"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:paddingTop="2dp"
            android:textColor="@color/black"
            android:textSize="@dimen/text_title"
            app:drawableStartCompat="@drawable/ic_search_24dp"
            app:layout_constraintEnd_toStartOf="@+id/ivShowFilter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPositionTitle" />

        <ImageView
            android:id="@+id/ivShowFilter"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/show_filter"
            android:src="@drawable/ic_caret_down_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPositionTitle" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_border"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etFilterSearch">

            <TextView
                android:id="@+id/tvFilterFulltimeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fulltime"
                android:textColor="@color/black"
                android:textSize="@dimen/text_sub_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvFilterLocationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textSize="@dimen/text_sub_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvFilterFulltimeTitle" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/scFilterFulltime"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:checked="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etFilterLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_without_corner"
                android:hint="@string/location"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingHorizontal="20dp"
                android:paddingVertical="5dp"
                android:paddingTop="2dp"
                android:textColor="@color/black"
                android:textSize="@dimen/text_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvFilterLocationTitle"
                app:layout_constraintTop_toBottomOf="@id/scFilterFulltime" />

            <Button
                android:id="@+id/btnApplyFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:text="@string/apply_filter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etFilterLocation" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsvLayoutPositionList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fillViewport="true"
            android:overScrollMode="never"
            android:paddingBottom="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clFilter">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/rlPageLoadingScreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <include
                        android:id="@+id/pageLayoutLoadingScreen"
                        layout="@layout/page_loading_screen" />

                </RelativeLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clLayoutPositionList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvPositionData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:nestedScrollingEnabled="false"
                        android:overScrollMode="never"
                        android:paddingBottom="50dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:listitem="@layout/fragment_home_position_item" />

                    <ProgressBar
                        android:id="@+id/pbOnLoading"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:color/transparent"
                        android:indeterminate="true"
                        android:max="100"
                        android:theme="@style/LoadingScroll"
                        android:visibility="visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>